--- a/index.html
+++ b/index.html
@@ -1,14 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A28 - Digitalent 2020</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@400;500;700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./font-awesome//css/font-awesome.css">
+  <link rel="stylesheet" href="./css/style.css" />
+  <title>A28 - Digitalent 2020</title>
 </head>
+
 <body>
-    <nav></nav>
-    <header></header>
-    <main></main>
-    <footer></footer>
+  <header>
+    <nav>
+      <div class="navbar-logo">
+        <h2>Digitalent</h2>
+      </div>
+      <ul class="">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#team">Team</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+      <div class="menu-toggle">
+        <input type="checkbox" />
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </nav>
+
+    <div class="carousel-container" id="home">
+      <div class="carousel-item fade">
+        <img src="./img/bg-banner.png" alt="background banner" />
+        <div class="carousel-caption">
+          <h1>Digitalent A28</h1>
+          <p>
+            We create beautiful websites, specially designed for mobile devices, so your bussiniess is available to all
+            + your clients,
+            wherever the are. Mobile versions of our website display perfectlly on any device, browser or operating
+            systems.
+          </p>
+          <button class="btn">LEARNMORE</button>
+        </div>
+      </div>
+    </div>
+  </header>
+  <main>
+    <div class="card-container" id="services">
+      <div class="section-title">
+        <h2>SERVICES WE OFFER</h2>
+        <p>We will solved your business problem with our technology.</p>
+      </div>
+      <div class="card-content">
+        <div class="card-item">
+          <img src="./img/web-icon.svg" alt="web icon" width="70" height="100">
+          <div class="card-caption">
+            <h3 class="card-title">Web Developer</h3>
+            <p class="card-description">Writing well designed, testable, efficient code by using best software development practices. </p>
+          </div>
+        </div>
+        <div class="card-item">
+          <img src="./img/mobile-icon.svg" alt="mobile icon" width="70" height="100">
+          <div class="card-caption">
+            <h3 class="card-title">Andoid / Ios Developer</h3>
+            <p class="card-description">Designing and developing advanced applications for the Android platform. Unit-testing code for robustness, including edge cases, usability, and general reliability.</p>
+          </div>
+        </div>
+        <div class="card-item">
+          <img src="./img/design-icon.svg" alt="mobile icon" width="70" height="100">
+          <div class="card-caption">
+            <h3 class="card-title">UI/UX Designer</h3>
+            <p class="card-description">Gathering and evaluating user requirements, in collaboration with product managers and engineers. Illustrating design ideas using storyboards, process flows and sitemaps</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="amazing-title">
+      <h2 class="judul">We are digital creative</h2>
+      <div class="deskripsi">
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book.</p>
+      </div>
+    </div>
+
+    <div class="team-container" id="team">
+      <div class="team-title">
+        <h2>Our Team</h2>
+        <p>We will solved your business problem with our technology.</p>
+      </div>
+    </div>
+    <div class="content-container">
+      <div class="team-content">
+        <div class="team-pic">
+          <img src="./img/team-pic1.png" alt="">
+        </div>
+        <div class="team-caption">
+          <h3 class="team-name">Aji Prasetyo</h3>
+          <p class="team-job">Web Developer</p>
+          <p class="team-address">Banyuwangi, Jawa Timur Indonesia</p>
+        </div>
+      </div>
+      <div class="team-content">
+        <div class="team-pic">
+          <img src="./img/team-pic2.png" alt="">
+        </div>
+        <div class="team-caption">
+          <h3 class="team-name">Agung Adi Nurrochman</h3>
+          <p class="team-job">Marketing Communication</p>
+          <p class="team-address">Bandung, Jawa Barat <br> Indonesia</p>
+        </div>
+      </div>
+    </div>
+  </main>
+  <!-- Form contact -->
+  <div class="amazing-title" id="contact">
+    <h2 class="judul">We Always Work To Make A Difference</h2>
+    <div class="deskripsi">
+      <p>If you like our works and have a project,contact us now</p>
+      <button class="btn">CONTACT US</button>
+    </div>
+  </div>
+  <!-- End form contact -->
+  <footer>
+    <div class="footer-container">
+      <div class="footer-content">
+        <h2>Digitalent</h2>
+        <p>Lorem Ipsum has been the industry's standard dummy text ever since
+          the 1500s.</p>
+        <p class="copy-right">&copy; Copyright A28 Digitalent 2020</p>
+      </div>
+    </div>
+  </footer>
 </body>
+<script src="./js/script.js"></script>
+</script>
+
 </html>
