--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="./font-awesome//css/font-awesome.css">
   <link rel="stylesheet" href="./css/style.css" />
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
   <title>A28 - Digitalent 2020</title>
 </head>
 
