--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0" />
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@400;500;700&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@100;300;400;500;700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./font-awesome//css/font-awesome.css">
   <link rel="stylesheet" href="./css/style.css" />
@@ -34,7 +34,7 @@
 
     <div class="carousel-container" id="home">
       <div class="carousel-item fade">
-        <img src="./img/bg-banner.png" alt="background banner" />
+        <img src="./img/bg.jpg" alt="background banner" />
         <div class="carousel-caption">
           <h1>Digitalent A28</h1>
           <p>
