--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
       <div class="carousel-item fade">
         <img src="./img/bg.jpg" alt="background banner" />
         <div class="carousel-caption">
-          <h1>Digitalent A28</h1>
+          <h1>BUSINESS CORPORATE & <br>
+            CONSULTING</h1>
           <p>
             We create beautiful websites, specially designed for mobile devices, so your bussiniess is available to all
             + your clients,
-            wherever the are. Mobile versions of our website display perfectlly on any device, browser or operating
-            systems.
+            wherever the are. 
           </p>
-          <button class="btn">LEARNMORE</button>
+          <button class="btn">CONTACT US</button>
         </div>
       </div>
     </div>
   </header>
   <main>
     <div class="card-container" id="services">
-      <div class="section-title">
+      <div class="card-section-title">
         <h2>SERVICES WE OFFER</h2>
         <p>We will solved your business problem with our technology.</p>
       </div>
@@ -60,34 +60,35 @@
           <div class="card-caption">
             <h3 class="card-title">Web Developer</h3>
             <p class="card-description">Writing well designed, testable, efficient code by using best software development practices. </p>
+            <button class="btn">Read More</button>
           </div>
         </div>
         <div class="card-item">
           <img src="./img/mobile-icon.svg" alt="mobile icon" width="70" height="100">
           <div class="card-caption">
             <h3 class="card-title">Andoid / Ios Developer</h3>
-            <p class="card-description">Designing and developing advanced applications for the Android platform. Unit-testing code for robustness, including edge cases, usability, and general reliability.</p>
+            <p class="card-description">Writing well designed, testable, efficient code by using best software development practices. </p>
+            <button class="btn">Read More</button>
           </div>
         </div>
         <div class="card-item">
           <img src="./img/design-icon.svg" alt="mobile icon" width="70" height="100">
           <div class="card-caption">
             <h3 class="card-title">UI/UX Designer</h3>
-            <p class="card-description">Gathering and evaluating user requirements, in collaboration with product managers and engineers. Illustrating design ideas using storyboards, process flows and sitemaps</p>
+            <p class="card-description">Writing well designed, testable, efficient code by using best software development practices. </p>
+            <button class="btn">Read More</button>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="amazing-title">
-      <h2 class="judul">We are digital creative</h2>
-      <div class="deskripsi">
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-          scrambled it to make a type specimen book.</p>
-      </div>
+    <div class="section-one">
+      <h2 class="section-title">We are digital creative</h2>
+        <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+          industry's standard dummy text ever since the 1500s.</p>
     </div>
 
+  <!-- Team Section -->
     <div class="team-container" id="team">
       <div class="team-title">
         <h2>Our Team</h2>
@@ -102,7 +103,7 @@
         <div class="team-caption">
           <h3 class="team-name">Aji Prasetyo</h3>
           <p class="team-job">Web Developer</p>
-          <p class="team-address">Banyuwangi, Jawa Timur Indonesia</p>
+          <p class="team-address">Banyuwangi, Jawa Timur <br> Indonesia</p>
         </div>
       </div>
       <div class="team-content">
@@ -117,23 +118,20 @@
       </div>
     </div>
   </main>
+  <!-- End Team Section -->
   <!-- Form contact -->
-  <div class="amazing-title" id="contact">
-    <h2 class="judul">We Always Work To Make A Difference</h2>
-    <div class="deskripsi">
-      <p>If you like our works and have a project,contact us now</p>
-      <button class="btn">CONTACT US</button>
-    </div>
+  <div class="section-one" id="contact">
+    <h2 class="section-title">We Always Work To Make A Difference</h2>
+    <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+    <button class="btn">CONTACT US</button>
   </div>
   <!-- End form contact -->
   <footer>
     <div class="footer-container">
-      <div class="footer-content">
-        <h2>Digitalent</h2>
-        <p>Lorem Ipsum has been the industry's standard dummy text ever since
+        <h2 class="section-title">Digitalent</h2>
+        <p class="section-description">Lorem Ipsum has been the industry's standard dummy text ever since
           the 1500s.</p>
         <p class="copy-right">&copy; Copyright A28 Digitalent 2020</p>
-      </div>
     </div>
   </footer>
 </body>
