--- a/index.html
+++ b/index.html
@@ -34,8 +34,6 @@
 
     <div class="carousel-container" id="home">
       <div class="carousel-item fade">
-        <img src="./img/bg.jpg" alt="background banner" />
-        <div class="carousel-caption">
           <h1>BUSINESS CORPORATE & <br>
             CONSULTING</h1>
           <p>
@@ -44,7 +42,6 @@
             wherever the are. 
           </p>
           <button class="btn">CONTACT US</button>
-        </div>
       </div>
     </div>
   </header>
@@ -92,7 +89,7 @@
     <div class="team-container" id="team">
       <div class="team-title">
         <h2>Our Team</h2>
-        <p>We will solved your business problem with our technology.</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
       </div>
     </div>
     <div class="content-container">
